WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282605
REGRESSION (
286095@main
): Child views no longer removed on scrolling
https://bugs.webkit.org/show_bug.cgi?id=282605
Summary
REGRESSION (286095@main): Child views no longer removed on scrolling
Simon Fraser (smfr)
Reported
2024-11-05 08:11:27 PST
286095@main
inadvertently removed the call to webPageProxy->scrollingNodeScrollViewDidScroll(), and and there are no tests to detect that this broke.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-05 08:11:48 PST
<
rdar://problem/139284408
>
Simon Fraser (smfr)
Comment 2
2024-11-05 08:13:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36187
EWS
Comment 3
2024-11-05 11:55:56 PST
Committed
286177@main
(9e502f85c30a): <
https://commits.webkit.org/286177@main
> Reviewed commits have been landed. Closing PR #36187 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug