REGRESSION (286095@main): Child views no longer removed on scrolling https://bugs.webkit.org/show_bug.cgi?id=282605 rdar://139284408

Reviewed by Wenson Hsieh.

286095@main inadvertently removed the call to `webPageProxy->scrollingNodeScrollViewDidScroll()`,
and there are no tests to detect that this broke.

Reinstate the call to `scrollingNodeScrollViewDidScroll()`, inside the loop where we have
the nodeID.

* Source/WebKit/UIProcess/RemoteLayerTree/RemoteScrollingCoordinatorProxy.cpp:
(WebKit::RemoteScrollingCoordinatorProxy::sendScrollingTreeNodeDidScroll):

Canonical link: https://commits.webkit.org/286177@main